<resources>
    <!-- General Strings -->
    <string name="app_name">UbiBike</string>
    <string name="impossible_connect_server_toast">Impossible connect server</string>
    <string name="field_required_hint">Field required</string>
    <string name="initial_marker_title">Start</string>
    <string name="last_marker_title">Finish</string>
    <!-- Drawer Menu Stuff -->
    <array name="drawer_items">
        <item>Home</item>
        <item>Nearby Users</item>
        <item>Search User</item>
        <item>Stations</item>
        <item>Current Tracking</item>
        <item>Logout</item>
        <item>Tracking Demo</item>
        <item>My Bike</item>
    </array>
    <!-- Login Activity -->
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button">Login</string>
    <string name="login_failed_toast">Login failed</string>
    <!-- Create Account Activity -->
    <string name="create_account_title">Create Account</string>
    <string name="create_account_button">Create Account</string>
    <string name="accept_terms_checkbox">Accept our privacy terms</string>
    <string name="creation_success_toast">Creation success</string>
    <string name="username_already_exist_toast">Choose other username</string>
    <string name="password_doesnt_match_toast">Password doesn\'t match</string>
    <!-- Home Activity -->
    <string name="home_title">Home</string>
    <string name="send_trajectory_button">Send trajectory cloud</string>
    <string name="trajectories_text_view">Trajectories</string>
    <string name="points_text_view">Points: </string>
    <string name="send_trajectory_success_toast">Trajectory sent with success</string>
    <string name="send_trajectory_failed_toast">Trajectory already in cloud</string>
    <!-- Stations Activity -->
    <string name="stations_title">Stations</string>
    <!-- Bike Booking Activity -->
    <string name="bike_title">Bike Booking</string>
    <string name="book_button">Book Bike</string>
    <string name="booking_success_toast">Bike booked with success</string>
    <string name="booking_failed_toast">Bike booking failed</string>
    <string name="select_bike_toast">Select a bike in map</string>
    <!-- Search Users Activity -->
    <string name="search_title">Search User</string>
    <string name="search_button">Search</string>
    <string name="users_found_toast">Users found</string>
    <!-- Nearby Users Activity -->
    <string name="nearby_users_title">NearbyUsersActivity</string>
    <string name="port">10001</string>
    <string name="title_activity_chat">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_real_time_tracking">RealTimeTracking</string>

</resources>
