<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulisboa.tecnico.cmu.ubibike.activities.HomeActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/home_title"
        android:id="@+id/title_textView"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/title"
        android:textSize="@dimen/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/username_textView"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/title_textView"
        android:layout_toLeftOf="@+id/title_textView"
        android:layout_toStartOf="@+id/title_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/points_textView"
        android:layout_alignTop="@+id/username_textView"
        android:layout_toRightOf="@+id/title_textView"
        android:layout_toEndOf="@+id/title_textView" />
    <fragment
        android:id="@+id/home_map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="210dp" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_trajectory_button"
        android:id="@+id/send_traj_button"
        android:layout_alignBottom="@+id/home_map"
        android:layout_centerHorizontal="true"
        android:onClick="sendTrajectoryCloud" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_trajectories"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/username_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trajectories_text_view"
        android:id="@+id/textView_trajectories"
        android:layout_below="@+id/username_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
